# bio-search

./: .env.example  .gitignore  CLAUDE.md  README.md  prd.md  pyproject.toml
.claude/: settings.local.json
src/bio_search/: __main__.py  app.py  config.py
src/bio_search/analysis/: __init__.py  clinical.py  correlation.py  effect_size.py  engine.py  ewas.py  guided.py  multiple_testing.py  regression.py  subgroup.py  trend.py
src/bio_search/data/: __init__.py  cache.py  catalog.py  codebook.py  downloader.py  harmonizer.py  loader.py  merger.py
src/bio_search/llm/: client.py  query_parser.py  writer.py
src/bio_search/models/: __init__.py  analysis.py  export.py  nhanes.py  survey.py
src/bio_search/output/: manuscript.py  report.py  structured.py
src/bio_search/survey/: __init__.py  design.py  estimator.py  weights.py
src/bio_search/tui/: __init__.py
src/bio_search/tui/screens/: __init__.py  main.py
src/bio_search/tui/styles/: app.tcss
src/bio_search/tui/widgets/: __init__.py  chart_widget.py  command_input.py  data_tree.py  progress.py  results_table.py  variable_info.py
src/bio_search/visualization/: export.py  terminal.py
tests/: conftest.py
tests/unit/: test_catalog.py  test_effect_size.py  test_ewas.py  test_multiple_testing.py  test_output.py  test_survey_weights.py  test_variable_classification.py
