[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bio-search"
version = "0.1.0"
description = "NHANES Biomedical Association Mining TUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "textual-plotext>=0.2.0",
    "rich>=13.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=1.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "samplics>=0.5.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "tenacity>=8.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.scripts]
biosearch = "bio_search.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
